# mcp-trentina

./: .gitignore  CLAUDE.md  Containerfile  Containerfile.gateway-overlay  Makefile  cockpit-airlock.spec  cockpit-trentina.spec  gourmand-exceptions.toml  pyproject.toml
.github/workflows/: ci.yml  gatehouse.yml  publish-deprecation.yml  publish.yml  security.yml
.specify/specs/006-gateway-mode/: plan.md  spec.md
.specify/specs/007-description-compression/: plan.md  spec.md
.specify/specs/008-circuit-breaker/: plan.md  spec.md
.specify/specs/009-per-profile-provider/: plan.md  spec.md
.specify/specs/010-streamable-http/: plan.md  spec.md
.specify/specs/011-per-profile-llm-key/: plan.md  spec.md
.specify/specs/012-provider-fallback-chain/: plan.md  spec.md
benchmarks/: provider_benchmark.py
cockpit-airlock/: airlock.js  index.html  manifest.json
cockpit-trentina/: index.html  manifest.json  trentina.css  trentina.js
dbus/: com.crunchtools.Airlock1.conf
deprecation/: README.md  pyproject.toml
deprecation/src/mcp_airlock_crunchtools/: __init__.py  __main__.py
docs/: benchmark.md  cockpit-plugin.md  gateway-design.md  llm-proxying.md  profiles.md
examples/: profiles-kagetora.yaml
src/mcp_airlock_crunchtools/: __init__.py  config.py  database.py  dbus_interface.py  events.py  server.py
src/mcp_airlock_crunchtools/gateway/: __init__.py  app.py  auth.py  backend.py  errors.py  filter.py  guards.py  internal.py  loader.py  profile.py  router.py
src/mcp_airlock_crunchtools/quarantine/: agent.py  classifier.py
src/mcp_airlock_crunchtools/tools/: content.py  fetch.py  read.py  scan.py  search.py
src/mcp_trentina_crunchtools/: __init__.py  config.py  database.py  errors.py  server.py
src/mcp_trentina_crunchtools/gateway/: __init__.py  app.py  auth.py  backend.py  circuit.py  compress.py  context.py  llm_proxy.py  loader.py  matrix_proxy.py  profile.py  router.py  sessions.py
src/mcp_trentina_crunchtools/quarantine/: agent.py
src/mcp_trentina_crunchtools/quarantine/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/mcp_trentina_crunchtools/tools/: __init__.py  reconnect.py  stats.py
tests/: adversarial_corpus.py  conftest.py  test_adversarial_corpus.py  test_circuit_breaker.py  test_classifier.py  test_dbus_interface.py  test_events.py  test_gateway_app.py  test_gateway_auth.py  test_gateway_backend.py  test_gateway_compress.py  test_gateway_filter.py  test_gateway_guards.py  test_gateway_internal.py  test_gateway_profile.py  test_gateway_router.py  test_gateway_sessions.py  test_gateway_streamable.py  test_l2_integration.py  test_l3_integration.py  test_l3_live.py  test_llm_proxy.py  test_matrix_proxy.py  test_pipeline.py  test_provider_fallback.py  test_provider_fullstack.py  test_provider_integration.py  test_providers.py  test_qagent.py  test_reconnect.py  test_server.py
