[project]
name = "mcp-trentina-crunchtools"
version = "0.5.0"
description = "Secure MCP gateway and quarantine for AI agent traffic — three-layer defense against prompt injection"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
    { name = "crunchtools.com" }
]
readme = "README.md"
keywords = ["mcp", "security", "prompt-injection", "sanitization", "quarantine", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.28",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "markdownify>=0.14",
    "onnxruntime>=1.17",
    "transformers>=4.40",
    "numpy>=1.24",
    "dbus-fast>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
mcp-trentina-crunchtools = "mcp_trentina_crunchtools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trentina_crunchtools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "C4", "C901", "DTZ", "T10", "ISC", "PIE", "PT", "RET", "SIM", "TID", "TCH", "ARG", "PLC", "PLE", "PLR", "PLW", "TRY", "RUF"]
ignore = [
    "S101",     # assert allowed in tests
    "TRY003",   # long exception messages ok
    "PLR0913",  # many arguments ok for tools
    "PLR0917",  # many positional arguments ok for tools (newer ruff enforces this)
    "PLR2004",  # magic numbers ok (HTTP status codes, limits)
    "PLW0603",  # global statement ok for singletons
    "PIE790",   # pass in empty classes ok
    "PLC0415",  # imports in tests ok
    "S105",     # hardcoded passwords in tests ok
    "TID252",   # relative imports in package ok
    "RUF022",   # __all__ sorted by category, not alphabetically
]

[tool.ruff.lint.pylint]
max-branches = 10
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S108", "PLC0415", "PLR2004", "ARG002", "ARG005", "RUF003", "PT018", "TC003"]
"src/mcp_trentina_crunchtools/dbus_interface.py" = ["UP037", "C901", "TRY300"]
"src/mcp_trentina_crunchtools/gateway/app.py" = ["C901", "PLR0911", "PLR0912"]
# E402: the benchmark inserts the repo root on sys.path before importing the
# corpus and package, so those imports intentionally follow that setup.
# PLR0915: render_markdown is a linear report builder — many append statements,
# no real branching. Kept inline (one caller) to satisfy Gourmand's
# single-use-helper rule rather than split into helpers.
"benchmarks/provider_benchmark.py" = ["E402", "PLR0915"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["markdownify", "bs4", "onnxruntime", "transformers", "dbus_fast", "dbus_fast.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
